// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimalsService addAnimals should return newly created animals 1`] = `
[
  {
    "createdAt": "2022-02-02",
    "description": undefined,
    "id": "id1",
    "name": "Elephant",
    "type": "MAMMALS",
  },
  {
    "createdAt": "2022-02-02",
    "description": undefined,
    "id": "id2",
    "name": "Lion",
    "type": "MAMMALS",
  },
]
`;

exports[`AnimalsService addAnimals should throw error BadRequestException --> Animal from the list already exist in db 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService addAnimals should throw error InternalServerErrorException when mongodb fails 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService addAnimalsWithOneType should return newly created animals 1`] = `
[
  {
    "createdAt": "2022-02-02",
    "description": undefined,
    "id": "id1",
    "name": "Cat",
    "type": "MAMMALS",
  },
  {
    "createdAt": "2022-02-02",
    "description": undefined,
    "id": "id2",
    "name": "Dog",
    "type": "MAMMALS",
  },
]
`;

exports[`AnimalsService addAnimalsWithOneType should throw error BadRequestException --> Animal from the list already exist in db 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService addAnimalsWithOneType should throw error InternalServerErrorException when mongodb fails 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService create should return newly created animal 1`] = `
{
  "createdAt": 2022-02-02T00:00:00.000Z,
  "description": "new dog created",
  "id": "507f1f77bcf86cd799439011",
  "name": "Dog",
  "type": "MAMMALS",
}
`;

exports[`AnimalsService create should throw error BadRequestException --> Animal already exist in database 1`] = `[BadRequestException: Animal already exist in database]`;

exports[`AnimalsService create should throw error InternalServerErrorException when mongodb fails 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService findAll should find all animals 1`] = `
[
  AnimalDtoResponse {
    "createdAt": "Sun, 19 Mar 2023 18:27:12 GMT",
    "description": "test description",
    "id": "507f1f77bcf86cd799439011",
    "name": "Human",
    "type": "MAMMALS",
  },
]
`;

exports[`AnimalsService findAll should throw Internal Exception Error when something goes wrong with mongodb connection 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService findOne should return one animal 1`] = `
AnimalDtoResponse {
  "createdAt": "Sun, 19 Mar 2023 18:27:12 GMT",
  "description": "test description",
  "id": "507f1f77bcf86cd799439011",
  "name": "Human",
  "type": "MAMMALS",
}
`;

exports[`AnimalsService findOne should throw error InternalServerErrorException when mongodb fails 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService findOne should throw error NotFoundException --> Not Found, when animal does not exist 1`] = `[NotFoundException: Not Found]`;

exports[`AnimalsService update should return updated animal 1`] = `
AnimalDtoResponse {
  "createdAt": "Sun, 19 Mar 2023 18:27:12 GMT",
  "description": "description after update",
  "id": "[object Object]",
  "name": "Cat",
  "type": "BIRDS",
}
`;

exports[`AnimalsService update should throw error InternalServerErrorException when mongodb fails 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService update should throw error NotFoundException --> Not Found, when animal does not exist 1`] = `[NotFoundException: Not Found]`;
